--- a/root/pages/about.html
+++ b/root/pages/about.html
@@ -24,7 +24,11 @@
       </form>
     </span>
     |
-    <span><a href="../login.html">Login</a></span>
+    <span>
+      <a href="../login.html">Login</a>
+      |
+      <a href="../signup.html">Daftar</a>
+    </span>
   </nav>
   <main>
     <article>
