--- a/root/pages/see_CSS.html
+++ b/root/pages/see_CSS.html
@@ -24,7 +24,11 @@
       </form>
     </span>
     |
-    <span><a href="../login.html">Login</a></span>
+    <span>
+      <a href="../login.html">Login</a>
+      |
+      <a href="../signup.html">Daftar</a>
+    </span>
   </nav>
   <iframe src="../styles/default.css" style="width: 100%; height: 67vh; margin-top: 0.5rem; border: 2px solid black;"></iframe>
 </body>
