--- a/root/signup.html
+++ b/root/signup.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Daftar</title>
   <link rel="stylesheet" href="./styles/default.css">
-  <link rel="stylesheet" href="./styles/login/login.css">
+  <link rel="stylesheet" href="./styles/signup/signup.css">
 </head>
 
 <body>
   <header>
-    <h1>Login</h1>
+    <h1>Daftar</h1>
   </header>
   <nav>
     <span><a href="./index.html">Home</a></span>
@@ -26,15 +26,15 @@
     </span>
     |
     <span>
-      <a href="">Login</a>
+      <a href="./login.html">Login</a>
       |
       <a href="./signup.html">Daftar</a>
     </span>
   </nav>
   <main>
-    <form action="./login.html" method="post" id="login">
+    <form action="./signup.html" method="post" id="signup">
       <fieldset>
-        <legend>Login</legend>
+        <legend>Daftar</legend>
         <table>
           <tr>
             <td colspan="3"><img src="./images/user.svg" alt="user"></td>
@@ -42,16 +42,16 @@
           <tr>
             <td><label for="username">Username</label></td>
             <td>:</td>
-            <td><input type="text" name="username" id="username" placeholder="haikal" value="haikal"></td>
+            <td><input type="text" name="username" id="username"></td>
           </tr>
           <tr>
             <td><label for="password">Password</label></td>
             <td>:</td>
-            <td><input type="password" name="password" id="password" placeholder="1121102019" value="1121102019"></td>
+            <td><input type="password" name="password" id="password"></td>
           </tr>
           <tr>
             <td colspan="3">
-              <button type="submit">Login</button>
+              <button type="submit">Daftar</button>
             </td>
           </tr>
         </table>
