add more 'input' when signup
optimize some css files
optimize some html files

--- a/root/index.html
+++ b/root/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8">
   <title>Tugas Dasar Pemrograman Backend</title>
   <link rel="stylesheet" href="./styles/default.css">
+  <style>
+    table {
+      border-collapse: collapse;
+    }
+
+    table td {
+      padding: 0.25rem;
+    }
+  </style>
 </head>
 
 <body>
@@ -33,9 +42,19 @@
   <main>
     <article>
       <h2>Ini adalah Blog Pribadi Saya</h2>
-      <p>Situs ini berisi beberapa artikel yang pernah saya tulis. Semoga tulisan saya membawa manfaat bagi setiap pembaca yang pernah membaca tulisan saya. Tidak banyak tulisan yang bisa saya muat di situs ini, saya hanya menulis apa yang saya ketahui dengan baik. Terima kasih.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas magnam laborum assumenda similique in nemo, modi molestiae necessitatibus vel animi adipisci dolor accusantium laboriosam corrupti explicabo cum minima? Quos tempora obcaecati illo saepe. Consequuntur nam maxime deserunt qui veniam perspiciatis laborum, dolor animi quos iure excepturi inventore adipisci enim dicta possimus quasi minima cupiditate eos, earum aliquid error expedita totam? Porro ipsum harum tempora.</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe harum error quis aliquid cum voluptas fugiat placeat, aut reiciendis quam vel minima delectus rerum molestias est accusamus beatae impedit perspiciatis deserunt fuga? Placeat fuga nostrum rem nobis ducimus, veritatis corporis est? Animi minus nostrum veniam! Sint rem numquam quod eaque temporibus exercitationem eius expedita libero animi sunt cumque non iure aliquid fugit, maxime error.</p>
+      <p>Situs ini berisi beberapa artikel (tapi bohong) yang pernah saya tulis. Semoga tulisan saya membawa manfaat bagi setiap pembaca yang pernah membaca tulisan saya. Tidak banyak tulisan yang bisa saya muat di situs ini, saya hanya menulis apa yang saya ketahui dengan baik. Terima kasih.</p>
+      <table>
+        <tr>
+          <td>Link Source Code</td>
+          <td>:</td>
+          <td><a href="https://github.com/haikalrowi/haikalrowi">GitHub</a></td>
+        </tr>
+        <tr>
+          <td>Link Laporan</td>
+          <td>:</td>
+          <td><a href="">qwerty</a></td>
+        </tr>
+      </table>
     </article>
   </main>
 </body>
