--- a/root/login.html
+++ b/root/login.html
@@ -37,7 +37,7 @@
         <legend>Login</legend>
         <table>
           <tr>
-            <td colspan="3"><img src="./images/user.svg" alt="user"></td>
+            <td colspan="3"><img src="./images/user.svg" alt="userSvg"></td>
           </tr>
           <tr>
             <td><label for="username">Username</label></td>
