--- a/root/pages/about.html
+++ b/root/pages/about.html
@@ -34,8 +34,7 @@
     <article>
       <h2>Saya, Bintang Haikal Afif Rowi</h2>
       <p>Saya adalah orang biasa seperti orang pada umumnya. Saya juga punya kelebihan dan kekurangan pada diri saya. Tidak banyak cerita yang bisa saya sampaikan. Intinya, semoga yang membaca tulisan ini diberkahi umur yang bermanfaat, selamat dunia sampai akhirat.</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ad, nostrum doloremque consequatur, pariatur consequuntur magnam commodi laboriosam facilis asperiores voluptatem dignissimos autem ipsum, neque explicabo esse eum excepturi nobis dolores. Reprehenderit molestiae perspiciatis eligendi alias ab deserunt consequuntur dolorem harum culpa inventore adipisci distinctio, quo explicabo accusantium odio neque maiores nobis repellat. Ratione ipsam nisi vitae hic totam, ipsa non amet doloremque et.</p>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea expedita exercitationem animi. Modi labore nam iusto odio incidunt cum fuga nostrum vero asperiores. Dolorem atque harum nemo ullam, unde expedita ratione odit sequi soluta veritatis tempore natus et explicabo consectetur eos consequatur porro architecto quibusdam exercitationem eveniet, labore nihil vitae amet. Magni assumenda quas similique! Similique, ipsam! Beatae delectus tempore molestiae, est praesentium autem.</p>
+      <p>Silahkan login untuk melihat gambar profil saya.</p>
     </article>
   </main>
 </body>
