--- a/root/signup.html
+++ b/root/signup.html
@@ -37,7 +37,22 @@
         <legend>Daftar</legend>
         <table>
           <tr>
-            <td colspan="3"><img src="./images/user.svg" alt="user"></td>
+            <td colspan="3"><img src="./images/user.svg" alt="userSvg"></td>
+          </tr>
+          <tr>
+            <td><label for="emailKu">Email</label></td>
+            <td>:</td>
+            <td><input type="email" name="emailKu" id="emailKu"></td>
+          </tr>
+          <tr>
+            <td><label for="namaKu">Nama</label></td>
+            <td>:</td>
+            <td><input type="text" name="namaKu" id="namaKu"></td>
+          </tr>
+          <tr>
+            <td><label for="tempatTanggalLahirKu">Tempat & <br> tanggal lahir</label></td>
+            <td>:</td>
+            <td><input type="date" name="tempatTanggalLahirKu" id="tempatTanggalLahirKu"></td>
           </tr>
           <tr>
             <td><label for="username">Username</label></td>
