--- a/root/pages/see_CSS.html
+++ b/root/pages/see_CSS.html
@@ -30,7 +30,7 @@
       <a href="../signup.html">Daftar</a>
     </span>
   </nav>
-  <iframe src="../styles/default.css" style="width: 100%; height: 67vh; margin-top: 0.5rem; border: 2px solid black;"></iframe>
+  <iframe src="../styles/default.css" style="width: 24rem; height: 67vh; margin-top: 0.5rem; border: 2px solid black;"></iframe>
 </body>
 
 </html>
