--- a/root/index.html
+++ b/root/index.html
@@ -52,7 +52,7 @@
         <tr>
           <td>Link Laporan</td>
           <td>:</td>
-          <td><a href="">qwerty</a></td>
+          <td><a href="./others/1121102019_Bintang Haikal Afif Rowi.pdf">Klik</a></td>
         </tr>
       </table>
     </article>
